<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.crs</groupId>
	<artifactId>vonebd.gen</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>vonebd.gen Maven Webapp</name>
	<url>http://maven.apache.org</url>

	<properties>
		<tomcat.version>7.0.27</tomcat.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.fitnesse</groupId>
			<artifactId>fitnesse</artifactId>
			<version>20111025</version>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-junit4</artifactId>
			<version>2.6.0-RC2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-legacy</artifactId>
			<version>2.6.0-RC2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.2.0</version>
		</dependency>

	</dependencies>
	<build>
		<finalName>vonebd.gen</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<!-- <configuration> <mainClass>com.crs.vonebd.apiclient.example.GettingStartedDriver</mainClass> 
					<executable>java</executable> <arguments> <argument>-XX:MaxPermSize=128M</argument> 
					<argument>-Dbtlan=true</argument> <argument>-Xmx1024M</argument> <argument>-Xdebug</argument> 
					<argument>-Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=n</argument> 
					<argument>-jar</argument> <argument>target/dependency/webapp-runner.jar</argument> 
					<argument>target/*.war</argument> <classpath/> </arguments> <commandlineArgs>-Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=n 
					-Dbtlan=true -jar target/dependency/webapp-runner.jar target/*.war</commandlineArgs> 
					</configuration> -->

				<configuration>
					<!-- <mainClass>com.crs.vonebd.apiclient.example.GettingStartedDriver</mainClass> -->
					<executable>java</executable>

					<arguments>
						<argument>-cp</argument>
						<argument>target/classes;target/vonebd.gen/WEB-INF/lib/jackson-core-asl-1.8.5.jar;target/vonebd.gen/WEB-INF/lib/jackson-mapper-asl-1.8.5.jar;.</argument>
						<argument>-XX:MaxPermSize=128M</argument>
						<argument>-Dbtlan=true</argument>
						<argument>-Xmx1024M</argument>
						<argument>-Xdebug</argument>
						<argument>-Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=n</argument>

						<!-- <argument>-jar</argument> -->
						<!-- <argument>target/dependency/webapp-runner.jar</argument> -->
						<!-- <argument>target/*.war</argument> -->

						<mainClass>com.crs.vonebd.apiclient.example.GettingStartedDriver</mainClass>
						<classpath />
					</arguments>
					<!-- <commandlineArgs>java -Xrunjdwp:transport=dt_socket,address=8888,server=y,suspend=n -Dbtlan=true -jar target/dependency/webapp-runner.jar target/*.war</commandlineArgs> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.code.maven-replacer-plugin</groupId>
				<artifactId>replacer</artifactId>
				<version>1.5.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>replace</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<file>target/vonebd.gen/index.jsp</file>
					<replacements>
						<replacement>
							<token>BUILD_DATE</token>
							<value>${build.date}</value>
						</replacement>
					</replacements>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>com.github.jsimone</groupId>
									<artifactId>webapp-runner</artifactId>
									<version>7.0.40.0</version>
									<destFileName>webapp-runner.jar</destFileName>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
